package eapli.ecourse.coursemanagement.domain;

public class Course {

}
